[metadata]
name = liquidity-flow-controller
version = 0.1.0
description = Stake sweeping utilities for Bittensor validators
long_description = file: README.md
long_description_content_type = text/markdown
author = Liquidity Flow Maintainers

[options]
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*
